ispCP ω 1.0.0 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~

2009-02-22 Daniel Andreca
	- GUI:
		* Fixed small XSS problem

2009-02-21 Thomas Häber
	- THEMES:
		* optimized CSS and JS files + coding style
		
2009-02-20 Benedikt Heintel
	- SETUP:
		* Fixed: 00_master.conf remains unchanged with vu2000 while changing prefix or UID/GID
	- LANGUAGES:
		* Updated all language files

2009-02-20 Thomas Häber
	- GUI:
		* fixed several HTML issues, for more valid HTML

2009-02-19 Daniel Andreca
	- GUI:
		* Fixed #1679: Problems in reseller/user_add1.php

2009-02-18 Daniel Andreca
	- GUI:
		* Fixed #1678: Escaping problem in admin/admin_log.php
		* Fixed #1677: Client/protected_group_delete.php missed variables in log

2009-02-17 Daniel Andreca
	- GUI:
		* Fixed #1673: If admin edits personal data of users, the admin template is loaded
		* Fixed #1675: Bug in admin/server_status.php
	- LANGUAGES:
		* Updated German
	- CONFIGS:
		* Fixed #1674: proftpd: root_domain.conf

2009-02-16 Benedikt Heintel
	- GUI:
		* Small fixes
	- LANGUAGES:
		* Updated Italian

2009-02-16 Daniel Andreca
	- GUI:
		* Fixed small typos introduced in r1502
		* Fixed Language uninstall is always the previous uninstalled
		* Add target _blank to phpmyadmin autologin
	- ENGINE:
		* Fixed #1672: Wrong VHCS Version in Updatescript

2009-02-16 Thomas Häber
	- GUI:
		* fixed uninitialized variable bugs in orderpanel
		* fixed missing replacement of some template variables
		* some fixes in hardcoded HTML
	- THEMES:
		* fixed some HTML/JS issues + typos

2009-02-15 Daniel Andreca
	- GUI:
		* Fixed #1665: Form and td/table tags are mixed-up the wrong way in admin/reseller_edit.tpl
		* Fixed #1664: ServerStatus running SSHD shows DOWN
		* Fixed #1669: File Conf /etc/httpd/vhosts/01_awstats.conf for apache_awstats in fedora core 10

2009-02-15 Benedikt Heintel
	- GUI:
		* Fixed #1662: change "mail" to "SMTP" in statistics
	- LANGUAGES:
		* Updated all language files

2009-02-14 Daniel Andreca
	- GUI: